--- a/menu.html
+++ b/menu.html
@@ -33,14 +33,19 @@
 <body>
 
    
-	
+	 <div class="container">
+	 <div class="row">
+		<img class="img-responsive center-block" src="img/centerlogosmall.png" alt="">
+		</div>
+	</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
+            <div class="navbar-header"> 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				  
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
