--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
 <body>
 
    
+
+	 <div class="row ">
+		<img class="img-responsive center-block" src="img/centerlogosmall.png" alt="">
+		</div>
 	
+
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse" role="navigation">
@@ -114,37 +119,37 @@
                 </div>
             </div>
         </div>
-
-        <div class="row">
+		<div class="row">
             <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Center Street Coffee
-                        <strong>worth visiting</strong>
-                    </h2>
-                    <hr>
-                    <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
-                    <hr class="visible-xs">
-                    <p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+        
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Coffee
+                    </h3>
+					<p>
+						"Coffee is the common man’s gold, and like gold, it brings to every person the feeling of luxury and nobility." <small>- Sheik-Abd-al-Kadir</small>
 					</p>
-                 </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">SAMPLE
-                        <strong>sample def</strong>
-                    </h2>
-                    <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                 </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="img/intro-pic.jpg" alt="">
+                    <h3>Pastries
+                    </h3>
+					<p>
+					Lorem ipsum dolor sit amet,Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+					</p>
+                </div>
+				<div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Specials
+                    </h3>
+					<p>
+					Lorem ipsum dolor sit amet,Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+					</p>
+                </div>
+              
+                <div class="clearfix"></div>
             </div>
         </div>
-
     </div>
     <!-- /.container -->
 
