--- a/index.html
+++ b/index.html
@@ -122,30 +122,23 @@
 		<div class="row">
             <div class="box">
         
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <div class="col-sm-6 text-center">
+                    <img class="img-responsive" src="img/intro-coffee.jpg"alt="">
                     <h3>Coffee
                     </h3>
 					<p>
 						"Coffee is the common man’s gold, and like gold, it brings to every person the feeling of luxury and nobility." <small>- Sheik-Abd-al-Kadir</small>
 					</p>
                 </div>
-                <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="img/intro-pic.jpg" alt="">
+                <div class="col-sm-6 text-center">
+                    <img class="img-responsive" src="img/intro-pastries.jpg" alt="">
                     <h3>Pastries
                     </h3>
 					<p>
 					Lorem ipsum dolor sit amet,Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
 					</p>
                 </div>
-				<div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>Specials
-                    </h3>
-					<p>
-					Lorem ipsum dolor sit amet,Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-					</p>
-                </div>
+
               
                 <div class="clearfix"></div>
             </div>
