--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container">
 
         <div class="row">
-            <div class="box">
+            <div class="box2">
                 <div class="col-lg-12 text-center">
                     <div id="carousel-example-generic" class="carousel slide">
                         <!-- Indicators -->
@@ -120,7 +120,7 @@
             </div>
         </div>
 		<div class="row">
-            <div class="box">
+            <div class="box2">
         
                 <div class="col-sm-6 text-center">
                     <img class="img-responsive" src="img/intro-coffee.jpg"alt="">
