--- a/menu.html
+++ b/menu.html
@@ -218,23 +218,23 @@
 								<p>Espresso Macchiato<strong>&nbsp;$&nbsp;2.99</strong></p>
 							</div>
 							<div class="col-sm-4 text-center">
-								<img class="img-responsive" src="img/menu/Cappuccino.jpg"alt="">
+								<img class="img-responsive" src="img/menu/cappuccino.jpg"alt="">
 								<p>Cappuccino<strong>&nbsp;$&nbsp;3.99</strong></p>
 							</div>
 							<div class="col-sm-4 text-center">
-								<img class="img-responsive" src="img/menu/Turkish.jpg"alt="">
+								<img class="img-responsive" src="img/menu/turkish.jpg"alt="">
 								<p>Turkish<strong>&nbsp;$&nbsp;3.50</strong></p>
 							</div>
 							<div class="col-sm-4 text-center">
-								<img class="img-responsive" src="img/menu/Latte.jpg"alt="">
+								<img class="img-responsive" src="img/menu/latte.jpg"alt="">
 								<p>Latte<strong>&nbsp;$&nbsp;3.99</strong></p>
 							</div>
 							<div class="col-sm-4 text-center">
-								<img class="img-responsive" src="img/menu/Americano.jpg"alt="">
+								<img class="img-responsive" src="img/menu/americano.jpg"alt="">
 								<p>Americano<strong>&nbsp;$&nbsp;2.99</strong></p>
 							</div>
 							<div class="col-sm-4 text-center">
-								<img class="img-responsive" src="img/menu/HotChocolate.jpg"alt="">
+								<img class="img-responsive" src="img/menu/hotchocolate.jpg"alt="">
 								<p>Hot Chocolate<strong>&nbsp;$&nbsp;2.99</strong></p>
 							</div>
                     </center>
