[*] - update css, background, addd retail.html

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
 <body>
 
-   
+
 
 	 <div class="row ">
 		<img class="img-responsive center-block" src="img/centerlogosmall.png" alt="">
 		</div>
-	
+
 
 
     <!-- Navigation -->
@@ -65,6 +65,9 @@
                     </li>
 					 <li>
                         <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="retail.html" class="active">Retail</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -115,13 +118,13 @@
                     </h2>
                     <h1 class="brand-name">Center Street Coffee</h1>
                     <hr class="tagline-divider">
-   
+
                 </div>
             </div>
         </div>
 		<div class="row">
             <div class="box">
-        
+
                 <div class="col-sm-6 text-center">
                     <img class="img-responsive" src="img/intro-coffee.jpg"alt="">
                     <h3>Coffee
@@ -139,7 +142,7 @@
 					</p>
                 </div>
 
-              
+
                 <div class="clearfix"></div>
             </div>
         </div>
