--- a/retail.html
+++ b/retail.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>About -  Center Street Coffee</title>
+    <title>Retail -  Center Street Coffee</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -85,17 +85,14 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About us
+                    <h2 class="intro-text text-center">Retail
 
                     </h2>
                     <hr>
                 </div>
-                <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-1.jpg" alt="">
-                </div>
-                <div class="col-md-6">
-                    <p>Center Street Coffee is Folly's newest Local coffee and pastry shop. Our Coffee is roasted right here on James Island. We sell local baked goods as well.</p>
-                     </div>
+                    <div class="col-lg-12">
+                      <iframe class="responsive" src="https://mkt.com/dolce/" width="100%" height="700" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    </div>
                 <div class="clearfix"></div>
 
 
