--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse" role="navigation">
+    <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -52,18 +52,18 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Center Street Coffee</a>
+                <a class="navbar-brand" href="index.html"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-					<li>
+					          <li>
                         <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="menu.html">Menu</a>
                     </li>
-					 <li>
+					          <li>
                         <a href="about.html">About</a>
                     </li>
                     <li>
