--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 <a class="navbar-brand" href="index.html">Center Street Coffee</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-default" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
 					<li>
                         <a href="index.html">Home</a>
@@ -106,7 +106,7 @@
 						</p>
 
                 </div>
-              
+
                 <div class="clearfix"></div>
 
 
