--- a/retail.html
+++ b/retail.html
@@ -40,7 +40,7 @@
 	</div>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse" role="navigation">
+    <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
