update contact.html = map auto size

--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                     <hr>
                 </div>
                 <div class="col-md-7">
-				  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1679.5610087071886!2d-79.94124035901245!3d32.65619699247855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fdd7ea6d096145%3A0x5d8ac6b542cae42b!2s18+Center+St%2C+Folly+Beach%2C+SC+29439%2C+USA!5e0!3m2!1sen!2sph!4v1470392100400" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+				  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1679.5610087071886!2d-79.94124035901245!3d32.65619699247855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88fdd7ea6d096145%3A0x5d8ac6b542cae42b!2s18+Center+St%2C+Folly+Beach%2C+SC+29439%2C+USA!5e0!3m2!1sen!2sph!4v1470392100400" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                     <!-- Embedded Google Map using an iframe - to select your location find it on Google maps and paste the link as the iframe src. If you want to use the Google Maps API instead then have at it! -->
 
 				</div>
